--- a/example/index.html
+++ b/example/index.html
@@ -32,35 +32,46 @@
 <body>
     <div class="wrapper">
         <h1>Rasterfari - Easy peasy grid system, ya man</h1>
-        <p>Rasterfari is an easy to use semantic grid system. Use it with simple class names:</p>
 
-<div class="rf-grid" data-code>
-    <div class="rf-grid__col">
+        <h2>Basic usage</h2>
+
+<div class="grid" data-code>
+    <div class="grid__col">
         <div class="example-col">12 cols</div>
     </div>
 
-    <div class="rf-grid__col  rf-grid__col--11">
+    <div class="grid__col  grid__col--11">
         <div class="example-col">11 cols</div>
     </div>
-    <div class="rf-grid__col  rf-grid__col--1">
+    <div class="grid__col  grid__col--1">
         <div class="example-col">1 col</div>
     </div>
 
-    <div class="rf-grid__col  rf-grid__col--10">
+    <div class="grid__col  grid__col--10">
         <div class="example-col">10 cols</div>
     </div>
-    <div class="rf-grid__col  rf-grid__col--2">
+    <div class="grid__col  grid__col--2">
         <div class="example-col">2 cols</div>
     </div>
 
-    <div class="rf-grid__col  rf-grid__col--6">
+    <div class="grid__col  grid__col--6">
         <div class="example-col">6 cols</div>
     </div>
-    <div class="rf-grid__col  rf-grid__col--6">
+    <div class="grid__col  grid__col--6">
         <div class="example-col">6 cols</div>
     </div>
 </div>
 
+    <h2>Responsive Grid</h2>
+
+<section class="grid" data-code>
+    <aside class="grid__col  grid__col--4@medium  grid__col--2@large">
+        <div class="example-col">Aside</div>
+    </aside>
+    <main class="grid__col  grid__col--8@medium  grid__col--10@large">
+        <div class="example-col">Main</div>
+    </main>
+</section>
 
     </div>
 
@@ -70,12 +81,11 @@
 
         for(var i = 0; i < codeElements.length; i++) {
             var el = codeElements[i];
-            var html = el.outerHTML.replace('data-code=""', '').replace(/</g, '&lt;');
+            var html = el.outerHTML.replace('data-code=""', '').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace('/\n/g', '    ');
             var code = document.createElement('pre')
 
             code.className = 'language-markup';
-            code.innerHTML = '<code>' + html + '</code>';
-            console.log(code);
+            code.innerHTML = '<code>' + html + '</code>'.trim();
             el.insertAdjacentHTML('afterend', code.outerHTML);
         }
 
