--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rasterfari / Easy peasy grid system, ya man</title>
+    <title>Rasterfari / Easy-peasy grid system, ya man</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.4.1/themes/prism-okaidia.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/rasterfari.css">
@@ -72,28 +72,28 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Rasterfari - Easy peasy grid system, ya man</h1>
+        <h1>Rasterfari - Easy peasy-grid system, ya man</h1>
 
         <h2>Default Settings:</h2>
 
-        <p>Feel free to overwrite them with your prefered values.</p>
+        <p>Feel free to overwrite them with your preferred values.</p>
 
         <pre><code class="language-css">@import "path/to/rasterfari.scss";
 
 /* some styles */
 
-$rasterfari__cols: 12 !default;         /* Use 16 if you want bigger Grid, Just rename it 16 */
-$rasterfari__gutter: 20px !default;     /* You can make the Gutter bigger or smaller when you change the value */
-$rasterfari__namespace: '' !default;    /* You can add a Name to the Grid */
+$rasterfari__cols: 12 !default;         /* Just rename it to 16 if you want a larger Grid */
+$rasterfari__gutter: 20px !default;     /* You can make the Gutter bigger or smaller by changing the value */
+$rasterfari__namespace: '' !default;    /* You can give a name to the Grid */
 $rasterfari__breakpoints: (             /* Grid breakpoints */
-    'medium': '(min-width: 40em)',      /* You can change the breakpoints naming too, but don't forget to rename it everywhere */
-    'large': '(min-width: 64em)'        /* Add a new breakpoint to the Grid if you need */
+    'medium': '(min-width: 40em)',      /* You can change the name of the breakpoints too, but do it everywhere */
+    'large': '(min-width: 64em)'        /* Add a new breakpoint to the Grid if you need it */
 ) !default;
 
 /* some more styles */
 </code></pre>
 
-        <h2>Basic usage</h2>
+        <h2>Basic Usage</h2>
 
 <section class="grid" data-code>
     <div class="grid__col">
@@ -193,7 +193,7 @@ $rasterfari__breakpoints: (             /* Grid breakpoints */
     </main>
 </section>
 
-    <h2>Middle aligned Grid System</h2>
+    <h2>Middle-aligned Grid System</h2>
 
 <section class="grid  is-middle" data-code>
     <div class="grid__col  grid__col--6@medium">
@@ -204,7 +204,7 @@ $rasterfari__breakpoints: (             /* Grid breakpoints */
     </div>
 </section>
 
-    <h2>Bottom aligned Grid System</h2>
+    <h2>Bottom-aligned Grid System</h2>
 
 <section class="grid  is-bottom" data-code>
     <div class="grid__col  grid__col--6@medium">
